Added mew_hash as alternative to crc hash, for faster runtime hashing of large data

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ target_include_directories(mdutils
 		${CMAKE_CURRENT_SOURCE_DIR}/src
 		${CMAKE_CURRENT_SOURCE_DIR}/ext/glm
 		${CMAKE_CURRENT_SOURCE_DIR}/ext/libxdrfile/src
+		${CMAKE_CURRENT_SOURCE_DIR}/ext/meow_hash
 )
 
 set(RESOURCE_DIR "${PROJECT_SOURCE_DIR}/")
