--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ext/glm"]
 	path = ext/glm
 	url = https://github.com/g-truc/glm
+[submodule "ext/meow_hash"]
+	path = ext/meow_hash
+	url = https://github.com/cmuratori/meow_hash.git
