Added Eigen to CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ target_include_directories(mdutils
 		${CMAKE_CURRENT_SOURCE_DIR}/ext/glm
 		${CMAKE_CURRENT_SOURCE_DIR}/ext/libxdrfile/src
 		${CMAKE_CURRENT_SOURCE_DIR}/ext/meow_hash
+        ${CMAKE_CURRENT_SOURCE_DIR}/ext/Eigen
 		${ISPC_BUILD_DIR}
 )
 
