--- a/ext/libxdrfile/CMakeLists.txt
+++ b/ext/libxdrfile/CMakeLists.txt
@@ -14,11 +14,14 @@ set(SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/src/xdrfile_xtc.c
 )
 
-if(MSVC)
-add_definitions(-D_CRT_SECURE_NO_WARNINGS)
-endif()
-
 add_library(libxdrfile ${HEADERS} ${SOURCES})
+
+if(MSVC)
+	target_compile_definitions(libxdrfile
+		PRIVATE _CRT_SECURE_NO_WARNINGS)
+	target_compile_options(libxdrfile
+		PRIVATE /W3 /wd4244 /wd4267 /wd4018 /wd4700)
+endif()
 
 target_include_directories(libxdrfile
 	PUBLIC
