More cmake fixes

--- a/ext/railgun/CMakeLists.txt
+++ b/ext/railgun/CMakeLists.txt
@@ -3,4 +3,7 @@ project(railgun LANGUAGES C)
 
 add_library(railgun STATIC ${CMAKE_CURRENT_SOURCE_DIR}/Railgun_Trolldom.c)
 target_include_directories(railgun PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/>)
-target_compile_options(railgun PRIVATE /W3 /wd4101)
+
+if(MSVC)
+	target_compile_options(railgun PRIVATE /W3 /wd4101)
+endif()
